--- a/ui/src/App.css
+++ b/ui/src/App.css
@@ -66,90 +66,4 @@ button {
 button:hover {
   background-color: #266ac3; /* Updated hover color */
 }
-
-/* Section and Controls */
-section {
-  margin: 2rem 0 1rem 0;
-}
-
-.controls {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-input {
-  text-align: center;
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-}
-
-/* Text Styles */
-h1 {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-/* Meals and Nutrients */
-.meals {
-  display: flex;
-  flex-wrap: wrap; /* Updated for responsiveness */
-}
-
-.nutrients ul {
-  display: flex;
-  justify-content: space-evenly;
-  flex-wrap: wrap; /*
-Updated for responsiveness */
-width: 100%;
-}
-/* Article and Image Styles */
-article {
-  padding: 2rem;
-  margin: 0 1rem;
-  max-width: 300px;
-  box-shadow: 0 4px 8px 2px rgba(77, 77, 77, 0.15);
-  }
-  
-  img {
-  width: 100%;
-  margin-bottom: 1rem;
-  }
-  
-  /* List and Instructions Styles */
-  ul {
-  list-style: none;
-  }
-  
-  .instructions {
-  font-size: 0.9rem;
-  margin-bottom: 1rem;
-  }
-  
-  /* Link Styles /
-  a {
-  text-decoration: none;
-  background-color: #00067e;
-  color: #f3f3f3;
-  padding: 0.5rem 1rem;
-  display: inline-block;
-  }
-   / Ensures width fits content */
-   
-  a:hover {
-  background-color: #00067e;
-  cursor: pointer;
-  }
-  
-  /* Media Queries */
-  @media only screen and (max-width: 1024px) {
-  .meals {
-  flex-direction: column;
-  align-items: center;
-  }
-  
-  .nutrients ul {
-  flex-direction: column;
-  align-items: center;
-  }
-  }
+/*  */
